[gd_scene load_steps=8 format=2]

[ext_resource path="res://gameobjects/enemies/DemonHurtbox.gd" type="Script" id=1]
[ext_resource path="res://gameobjects/AttackGoblin.gd" type="Script" id=2]
[ext_resource path="res://shapes/sphere_shape.tres" type="Shape" id=3]
[ext_resource path="res://models/attack_goblin_base.tscn" type="PackedScene" id=4]
[ext_resource path="res://sfx/big_monster_b.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/big_monster_a.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/big_monster_die.wav" type="AudioStream" id=7]

[node name="AttackGoblin" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.26728, 5.24855, 0.824471 )
script = ExtResource( 2 )
identifier = "Power Bull"

[node name="attack_goblin_base" parent="." instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = ExtResource( 3 )

[node name="DemonHurtbox" type="StaticBody" parent="."]
transform = Transform( 2.85345, 0, 0, 0, 4.02967, 0, 0, 0, 1.63049, 0, 1.58374, -0.359693 )
collision_layer = 10
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="DemonHurtbox"]
shape = ExtResource( 3 )

[node name="NavigationAgent" type="NavigationAgent" parent="."]

[node name="death_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 7 )
unit_db = 31.884
unit_size = 30.0
max_db = 4.087
pitch_scale = 0.91
bus = "Sound Effects"

[node name="forget_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_size = 30.0
pitch_scale = 0.91
bus = "Sound Effects"

[node name="notice_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
unit_size = 30.0
pitch_scale = 0.91
bus = "Sound Effects"
